[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Map/Outdoor Map.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Outdoor Map" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="Outdoor Map/Bushes" index="0"]
position = Vector2( 920.862, 203.179 )
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="Dead" from="Outdoor Map/Bushes/Player" to="." method="_on_Player_Dead"]
[connection signal="Gold_Changed" from="Outdoor Map/Bushes/Player" to="HUD" method="_on_Player_Gold_Changed"]
[connection signal="Health_Changed" from="Outdoor Map/Bushes/Player" to="HUD" method="_on_Player_Health_Changed"]
[connection signal="Stamina_Changed" from="Outdoor Map/Bushes/Player" to="HUD" method="_on_Player_Stamina_Changed"]

[editable path="HUD"]

[editable path="Outdoor Map"]
